charts/kube-overlay-operator/rendered.yaml
---
# Source: kube-overlay-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kovop-webhook
  labels:
    app.kubernetes.io/component: "webhook"
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app.kubernetes.io/component: "webhook"
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
---
# Source: kube-overlay-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: "metrics"
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  name: kovop-metrics
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: "operator"
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
---
# Source: kube-overlay-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: "metrics"
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  name: kovop-webhook-metrics
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: "webhook"
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
---
# Source: kube-overlay-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kovop
  labels:
    app.kubernetes.io/component: operator
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: operator
      app.kubernetes.io/name: kube-overlay-operator
      app.kubernetes.io/instance: kovop
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: operator
      labels:
        app.kubernetes.io/component: operator
        app.kubernetes.io/name: kube-overlay-operator
        app.kubernetes.io/instance: kovop
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
      securityContext:
        runAsNonRoot: true
      containers:
      - name: kube-rbac-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.13.0
        args:
        - "--secure-listen-address=0.0.0.0:8443"
        - "--upstream=http://127.0.0.1:8080/"
        - "--logtostderr=true"
        - "--v=0"
        ports:
        - containerPort: 8443
          protocol: TCP
          name: https
      - command:
        - /manager
        args:
        - "--leader-elect"
        - "--health-probe-bind-address=:8081"
        - "--metrics-bind-address=127.0.0.1:8080"
        image: "ghcr.io/deinstapel/kube-overlay-operator/operator:edge"
        imagePullPolicy: Always
        name: operator
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
      serviceAccountName: kovop
      terminationGracePeriodSeconds: 60
---
# Source: kube-overlay-operator/templates/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kovop-webhook
  labels:
    app.kubernetes.io/component: webhook
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/name: kube-overlay-operator
      app.kubernetes.io/instance: kovop
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: operator
      labels:
        app.kubernetes.io/component: webhook
        app.kubernetes.io/name: kube-overlay-operator
        app.kubernetes.io/instance: kovop
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - amd64
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
      securityContext:
        runAsNonRoot: true
      volumes:
      - name: webhook-cert
        secret:
          defaultMode: 420
          secretName: kovop-webhook-server-cert
      hostNetwork: true
      containers:
      - name: kube-rbac-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - "ALL"
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.13.0
        args:
        - "--secure-listen-address=0.0.0.0:8443"
        - "--upstream=http://127.0.0.1:8080/"
        - "--logtostderr=true"
        - "--v=0"
        ports:
        - containerPort: 8443
          protocol: TCP
          name: https
      - command:
        - /manager
        args:
        - "--health-probe-bind-address=:8081"
        - "--metrics-bind-address=127.0.0.1:8080"
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: webhook-cert
          readOnly: true
        image: "ghcr.io/deinstapel/kube-overlay-operator/webhook:edge"
        imagePullPolicy: Always
        name: operator
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
      serviceAccountName: kovop-webhook
      terminationGracePeriodSeconds: 60
---
# Source: kube-overlay-operator/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kovop-pod-injector
  labels:
    app.kubernetes.io/component: "webhook"
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: kovop/kovop-webhook-cert
webhooks:
- admissionReviewVersions:
  - v1
  objectSelector:
    matchLabels:
      network.deinstapel.de/inject-sidecar: "true"
  clientConfig:
    service:
      name: kovop-webhook
      namespace: kovop
      path: /mutate-v1-pod
  failurePolicy: Fail
  name: mpod.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
---
# Source: kube-overlay-operator/templates/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
  labels:
    app.kubernetes.io/component: "webhook"
    helm.sh/chart: kube-overlay-operator-0.1.0
    app.kubernetes.io/name: kube-overlay-operator
    app.kubernetes.io/instance: kovop
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: kovop/kovop-webhook-cert
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kovop-webhook
      namespace: kovop
      path: /validate-network-deinstapel-de-v1alpha1-overlaynetwork
  failurePolicy: Fail
  name: voverlaynetwork.kb.io
  rules:
  - apiGroups:
    - network.deinstapel.de
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - overlaynetworks
  sideEffects: None
